<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.opengroup.osdu</groupId>
  <artifactId>file-acceptance-test</artifactId>
  <version>0.28.0-SNAPSHOT</version>
  <packaging>jar</packaging>


  <description>Acceptance Test module</description>

  <properties>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <junit-jupiter.version>5.5.2</junit-jupiter.version>
    <argLine>
      --add-opens java.base/java.lang=ALL-UNNAMED
      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
    </argLine>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>3.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.opengroup.osdu</groupId>
      <artifactId>file-core</artifactId>
      <version>0.28.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.opengroup.osdu</groupId>
      <artifactId>os-core-common</artifactId>
      <version>3.3.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.9</version>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>0.9.1</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java8</artifactId>
      <version>5.4.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>5.4.0</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>5.4.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-guice</artifactId>
      <version>5.4.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>4.2.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.squareup.okhttp</groupId>
      <artifactId>okhttp</artifactId>
      <version>2.7.5</version>
    </dependency>
    <dependency>
      <groupId>com.nimbusds</groupId>
      <artifactId>oauth2-oidc-sdk</artifactId>
      <version>10.15</version>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>3.0.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0-M3</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
            </goals>
            <configuration>
              <excludes>
                <exclude>none</exclude>
              </excludes>
              <failIfNoTests>true</failIfNoTests>
              <includes>
                <include>org.opengroup.osdu.file.runner.FileTestsRunner</include>
                <include>org.opengroup.osdu.file.runner.FileDmsTestsRunner</include>
              </includes>
            </configuration>
          </execution>

          <execution>
            <id>verify</id>
            <goals>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>${repo.releases.id}</id>
      <url>${repo.releases.url}</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>${publish.releases.id}</id>
      <url>${publish.releases.url}</url>
    </repository>
    <snapshotRepository>
      <id>${publish.snapshots.id}</id>
      <url>${publish.snapshots.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>Default</id>
      <activation>
        <property>
          <name>!repo.releases.id</name>
        </property>
      </activation>
      <properties>
        <repo.releases.id>community-maven-repo</repo.releases.id>
        <publish.snapshots.id>community-maven-via-job-token</publish.snapshots.id>
        <publish.releases.id>community-maven-via-job-token</publish.releases.id>
        <repo.releases.url>https://community.opengroup.org/api/v4/groups/17/-/packages/maven</repo.releases.url>
        <publish.snapshots.url>https://community.opengroup.org/api/v4/projects/90/packages/maven</publish.snapshots.url>
        <publish.releases.url>https://community.opengroup.org/api/v4/projects/90/packages/maven</publish.releases.url>
      </properties>
    </profile>
  </profiles>
</project>
